tests/expectations/compiler/finalize/finalize_without_finalize_statement_fail.out
namespace = "Compile"
expectation = "Fail"
outputs = ["""
Error [ETYC0372088]: An async transition must call an async function.
    --> compiler-test:6:5
     |
   6 |     async transition mint_public(public receiver: address, public amount: u64) {
   7 |     
   8 |     }
     |     ^
     |
     = Example: `async transition foo() -> Future { let a: Future = bar(); return await_futures(a); }`
Warning [WTYC0372002]: The async function `finalize_mint_public` is never called by an async transition.
    --> compiler-test:10:5
     |
  10 |     async function finalize_mint_public (public receiver: address, public amount: u64) {
  11 |         Mapping::set(account, receiver, amount);
  12 |     }
     |     ^"""]
